# AlgorithmsLab2

./: .gitignore  CMakeLists.txt  README.md  exhaustive_search.h  main.cpp  persistent_segment_tree.h  point.h  rectangle.h  rectangle_map.h
benchmarks/: generators.h  time_mesuring.h
data/: PI1_Ageev_Lab2.xlsx
data/raw_results/: find_fixed_results.txt  find_results.txt  prep_results.txt  sum_fixed_results.txt  sum_results.txt
solvers/: point.h  rectangle_map.h
